# dust_extinction

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  ah_bootstrap.py  appveyor.yml  lgtm.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: draft-pdf.yml  publish.yml  tox-tests.yml
docs/: conf.py  index.rst
docs/dust_extinction/: choose_model.rst  deredden.rst  dev_model.rst  extinction.rst  extinguish.rst  fit_extinction.rst  index.rst  install.rst  logo.rst  model_flavors.rst  normalization_details.rst  reference_api.rst  references.rst
docs/logo/: make_logo.py
dust_extinction/: __init__.py  _astropy_init.py  averages.py  baseclasses.py  ccm89.py  conftest.py  conv_functions.py  conversions.py  deredden.py  dust_extinction.py  dust_extinction_averages.py  grain_models.py  helpers.py  parameter_averages.py  shapes.py  test_ccm89.py  warnings.py
dust_extinction/custom_models/: bf25.py
dust_extinction/data/: THEMIS_2.0_EXT_2.RES.txt  astrodust+PAH_MW_RV3.1.fits
dust_extinction/tests/: coveragerc  helpers.py  setup_package.py  test_alavtoelv.py  test_axavtoexv.py  test_bf25.py  test_ccm89.py  test_corvals.py  test_corvals_aves.py  test_corvals_grainmods.py  test_deredden.py  test_f04.py  test_f20.py  test_f99.py  test_fm90.py  test_fm90_b3.py  test_g03.py  test_g09_ave.py  test_g16.py  test_g23_renorm.py  test_gcc09.py  test_gcc09_ave.py  test_gcc10.py  test_ma14.py  test_nounits.py  test_o94.py  test_p92.py  test_unred.py  test_vcg04.py  test_warnings.py
dust_extinction/utils/: determine_norm_wavelength.py  save_to_ascii.py
joss/: paper.md
licenses/: LICENSE.rst
paper/: paper.bib  paper.md
