[project]
name = "dust_extinction"

# Version is provided by setuptools-scm
dynamic = ["version"]

# Short description
description = "Interstellar Dust Extinction Models"

# Long description from README.rst
readme = "README.rst"
readme-content-type = "text/x-rst"

# Python version requirement
requires-python = ">=3.7"

# Author information
authors = [
  { name = "Karl Gordon", email = "kgordon@stsci.edu" }
]

# License details
license = { text = "BSD 3-Clause", file = "licenses/LICENSE.rst" }

# Project URL
urls = { "Home" = "http://dust-extinction.readthedocs.io/" }

[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "wheel"]

build-backend = 'setuptools.build_meta'
