[metadata]
name = dust_extinction
author = Karl Gordon
author_email = kgordon@stsci.edu
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = http://dust-extinction.readthedocs.io/
description = Interstellar Dust Extinction Models
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = karllark/dust_extinction

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    matplotlib
    graphviz

[options.package_data]
dust_extinction = data/*

[tool:pytest]
testpaths = "dust_extinction" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
norecursedirs =
    dust_extinction/docs/_build/*
    dust_extinction/docs/api/*

[coverage:run]
omit =
    dust_extinction/_astropy_init*
    dust_extinction/conftest.py
    dust_extinction/*setup_package*
    dust_extinction/tests/*
    dust_extinction/*/tests/*
    dust_extinction/extern/*
    dust_extinction/version*
    */dust_extinction/_astropy_init*
    */dust_extinction/conftest.py
    */dust_extinction/*setup_package*
    */dust_extinction/tests/*
    */dust_extinction/*/tests/*
    */dust_extinction/extern/*
    */dust_extinction/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503

[pycodestyle]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503
